# pymchelper

./: .buildinfo  .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  INSTALL.rst  MANIFEST.in  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  README.rst  appveyor.yml  authors.html  bdo2txt.spec  contributing.html  convertmc.spec  developer.html  docker-compose.yml  ex_cyl.xls  ex_ymsh.xls  ex_zmsh.xls  excel_converter.html  fl_sim.inp  genindex.html  getting_started.html  gnuplot_converter.html  hdf_converter.html  image_converter.html  index.html  inspect_converter.html  install.html  install_deps.sh  make_single_executable.py  (+21 more)
.doctrees/: authors.doctree  contributing.doctree  developer.doctree  environment.pickle  excel_converter.doctree  getting_started.doctree  gnuplot_converter.doctree  hdf_converter.doctree  image_converter.doctree  index.doctree  inspect_converter.doctree  install.doctree  sparse_converter.doctree  technical.doctree  txt_converter.doctree  user_guide.doctree
.doctrees/apidoc/: modules.doctree  pymchelper.axis.doctree  pymchelper.doctree  pymchelper.estimator.doctree  pymchelper.executor.doctree  pymchelper.executor.options.doctree  pymchelper.executor.runner.doctree  pymchelper.flair.Data.doctree  pymchelper.flair.Input.doctree  pymchelper.flair.common.bmath.doctree  pymchelper.flair.common.csg.doctree  pymchelper.flair.common.doctree  pymchelper.flair.common.fortran.doctree  pymchelper.flair.common.log.doctree  pymchelper.flair.common.rexx.doctree  pymchelper.flair.doctree  pymchelper.input_output.doctree  pymchelper.page.doctree  pymchelper.readers.common.doctree  pymchelper.readers.doctree  pymchelper.readers.fluka.doctree  pymchelper.readers.shieldhit.binary_spec.doctree  pymchelper.readers.shieldhit.doctree  pymchelper.readers.shieldhit.general.doctree  pymchelper.readers.shieldhit.reader_base.doctree  pymchelper.readers.shieldhit.reader_bdo2016.doctree  pymchelper.readers.shieldhit.reader_bdo2019.doctree  pymchelper.readers.shieldhit.reader_bin2010.doctree  pymchelper.run.doctree  pymchelper.shieldhit.detector.detector_type.doctree  pymchelper.shieldhit.detector.doctree  pymchelper.shieldhit.detector.estimator.doctree  pymchelper.shieldhit.detector.estimator_type.doctree  pymchelper.shieldhit.detector.fortran_card.doctree  pymchelper.shieldhit.detector.geometry.doctree  pymchelper.shieldhit.doctree  pymchelper.shieldhit.particle.doctree  pymchelper.utils.doctree  pymchelper.utils.mcscripter.doctree  pymchelper.utils.pld2sobp.doctree  (+13 more)
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  copilot-setup-steps.yml  python-app.yml  release-deb.yml  release-linux-nuitka.yml  release-pip.yml  release.yml  (+1 more)
.travis/: deploy_package.sh  install_linux.sh  install_osx.sh  run_osx.sh
_modules/: index.html
_sources/: authors.rst.txt  contributing.rst.txt  excel_converter.rst.txt  hdf_converter.rst.txt  image_converter.rst.txt  install.rst.txt  technical.rst.txt
_static/: documentation_options.js
apidoc/: modules.html  pymchelper.axis.html  pymchelper.estimator.html  pymchelper.executor.html  pymchelper.executor.options.html  pymchelper.executor.runner.html  pymchelper.flair.Data.html  pymchelper.flair.Input.html  pymchelper.flair.common.bmath.html  pymchelper.flair.common.csg.html  pymchelper.flair.common.fortran.html  pymchelper.flair.common.html  pymchelper.flair.common.log.html  pymchelper.flair.common.rexx.html  pymchelper.flair.html  pymchelper.html  pymchelper.input_output.html  pymchelper.page.html  pymchelper.readers.common.html  pymchelper.readers.fluka.html  pymchelper.readers.html  pymchelper.readers.shieldhit.binary_spec.html  pymchelper.readers.shieldhit.general.html  pymchelper.readers.shieldhit.html  pymchelper.readers.shieldhit.reader_base.html  pymchelper.readers.shieldhit.reader_bdo2016.html  pymchelper.readers.shieldhit.reader_bdo2019.html  pymchelper.readers.shieldhit.reader_bin2010.html  pymchelper.run.html  pymchelper.shieldhit.detector.detector_type.html  pymchelper.shieldhit.detector.estimator.html  pymchelper.shieldhit.detector.estimator_type.html  pymchelper.shieldhit.detector.fortran_card.html  pymchelper.shieldhit.detector.geometry.html  pymchelper.shieldhit.detector.html  pymchelper.shieldhit.html  pymchelper.shieldhit.particle.html  pymchelper.utils.html  pymchelper.utils.mcscripter.html  pymchelper.utils.pld2sobp.html  (+13 more)
dat_for_pymc_patch_run/: test.ipynb
debian_packages/: add_packages_to_repo.sh  control  datamedsci.list  generate_deb_packages.sh
docs/: authors.rst  conf.py  contributing.rst  developer.rst  getting_started.rst  gnuplot_converter.rst  hdf_converter.rst  image_converter.rst  index.rst  inspect_converter.rst  install.rst  requirements.txt  sparse_converter.rst  technical.rst  txt_converter.rst  user_guide.rst
examples/: comparison.py  generate_detect_shieldhit.py  generate_fluka_input.py  scripting_sh12a_run.py
issue_443/: installation_mc_codes.txt
pymchelper/: Makefile  VERSION  __init__.py  _version.py  averaging.py  axis.py  bdo2txt.py  detector.py  estimator.py  fluka2shield.py  fortranformatter.py  input_output.py  io.py  page.py  pld2sobp.py  run.py  run_pymchelper.py  shield2fluka.c  simulator_type.py  version.py
tests/: conftest.py  requirements-test.txt  test_averaging.py  test_bdo2txt.py  test_call_entry.py  test_converters.py  test_cubic_spline.py  test_default_converter.py  test_example.py  test_fluka_generate.py  test_frompattern.py  test_generate.py  test_hdf.py  test_json.py  test_make_single_executable.py  test_mcpl.py  test_mcscripter.py  test_mocks.py  test_plan.py  test_pymchelper.py  test_read_fluka_files.py  test_read_topas_files.py  test_read_topas_header.py  test_reader_base.py  test_reader_bdo2019_diff_axis.py  test_runner.py  test_sh_detector.py  test_shieldhit12a_generate.py  test_weighted_stats.py
wrapper/: executor.py  executor_example.py  executor_exceptions.py  set_tmax0.py  shields_manager.py
(+301 files in other folders)
