[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pymchelper"
dynamic = ["version"]
description = "Python toolkit for SHIELD-HIT12A and FLUKA"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "pymchelper team", email = "leszek.grzanka@gmail.com"}
]
keywords = ["monte carlo", "particle therapy", "SHIELD-HIT12A", "FLUKA", "physics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Physics",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

# numpy compatibility matrix:
# numpy 1.26+ supports Python 3.9-3.12
# numpy 2.0+ supports Python 3.9-3.13
# numpy 2.1+ supports Python 3.10-3.13
# For Python 3.14, we'll need numpy >= 2.2 when available
dependencies = [
    "numpy>=1.20,<1.27.0 ; python_version == '3.9'",
    "numpy>=1.21 ; python_version == '3.10'",
    "numpy>=1.23.3 ; python_version == '3.11'",
    "numpy>=1.26 ; python_version == '3.12'",
    "numpy>=2.0.0 ; python_version == '3.13'",
    "numpy>=2.2.0 ; python_version >= '3.14'",
]

[project.optional-dependencies]
image = ["matplotlib"]
excel = ["xlwt"]
hdf = ["h5py"]
dicom = ["pydicom", "scipy"]
pytrip = [
    "scipy",
    "pytrip98>=3.8.0,<3.9.0 ; platform_system == 'Darwin' and python_version >= '3.11'",
    "pytrip98>=3.6.1,<3.9.0 ; platform_system == 'Darwin' and (python_version >= '3.10' and python_version < '3.11')",
    "pytrip98<3.9.0 ; platform_system == 'Darwin' and (python_version >= '3.5' and python_version < '3.10')",
    "pytrip98>=3.9.1 ; python_version >= '3.12'",
    "pytrip98>=3.8.0 ; python_version >= '3.11' and python_version < '3.12'",
    "pytrip98>=3.6.1 ; python_version >= '3.10' and python_version < '3.11'",
    "pytrip98 ; python_version >= '3.5' and python_version < '3.10'",
]
full = [
    "matplotlib",
    "xlwt",
    "h5py",
    "pydicom",
    "scipy",
    "pytrip98>=3.8.0,<3.9.0 ; platform_system == 'Darwin' and python_version >= '3.11'",
    "pytrip98>=3.6.1,<3.9.0 ; platform_system == 'Darwin' and (python_version >= '3.10' and python_version < '3.11')",
    "pytrip98<3.9.0 ; platform_system == 'Darwin' and (python_version >= '3.5' and python_version < '3.10')",
    "pytrip98>=3.9.1 ; python_version >= '3.12'",
    "pytrip98>=3.8.0 ; python_version >= '3.11' and python_version < '3.12'",
    "pytrip98>=3.6.1 ; python_version >= '3.10' and python_version < '3.11'",
    "pytrip98 ; python_version >= '3.5' and python_version < '3.10'",
    "hipsterplot",
    "bashplotlib",
]
test = [
    "pytest==8.4.2",
    "flake8==7.3.0",
    "sphinx==7.4.7 ; python_version == '3.9'",
    "sphinx==8.1.3 ; python_version == '3.10'",
    "sphinx==8.2.3 ; python_version >= '3.11'",
    "mcpl==1.6.2",
    "yapf==0.43.0",
    "requests==2.32.5",
    "pre-commit==3.7.1 ; python_version < '3.10'",
    "pre-commit==4.5.0 ; python_version >= '3.10'",
]
dev = [
    "pymchelper[full,test]",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/DataMedSci/pymchelper"
Documentation = "https://datamedsci.github.io/pymchelper/"
Repository = "https://github.com/DataMedSci/pymchelper.git"
Issues = "https://github.com/DataMedSci/pymchelper/issues"
Changelog = "https://github.com/DataMedSci/pymchelper/releases"

[project.scripts]
convertmc = "pymchelper.run:main"
runmc = "pymchelper.utils.runmc:main"
mcscripter = "pymchelper.utils.mcscripter:main"
plan2sobp = "pymchelper.utils.radiotherapy.plan:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*", "examples", "examples.*", "docs", "docs.*"]

[tool.setuptools.package-data]
pymchelper = ["flair/db/*", "VERSION"]

[tool.setuptools_scm]
version_file = "pymchelper/VERSION"
version_file_template = "{version}\n"
# Use tags starting with 'v' for version (e.g., v1.2.3)
tag_regex = "^v(?P<version>[\\d.]+)$"
# Local version format for non-release commits
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.pycodestyle]
max-line-length = 120

[tool.flake8]
max-line-length = 120

[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.wheel]
universal = false
